fix: link overflow & close warning modal

--- a/src/components/Modal/ExternalLinkWarningModal.css
+++ b/src/components/Modal/ExternalLinkWarningModal.css
@@ -16,6 +16,7 @@
   color: var(--black-800);
   pointer-events: none;
   cursor: default;
+  overflow-wrap: break-word;
 }
 
 .ExternalLinkWarningModal__Title .ui.header {
